--- a/index.html
+++ b/index.html
@@ -1,5 +1,31 @@
 <html>
 
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <noscript>
+        &lt;meta http-equiv="refresh" content="0; url=/nojs/splash"&gt;
+    </noscript>
+    <meta name="robots" content="NOODP">
+    <title>Duolingo Delights 🎁</title>
+    <meta name="viewport" content="initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width"
+    />
+    <meta name="description" id="meta-description" content="Surprise yourself with Delights. Learn the language, explore the culture. 🎁">
+    <meta name="keywords" content="delights, duolingo, duolingo delights, product management internship">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://fvcproductions.github.io/duolingo-delights">
+    <meta property="og:image" content="https://i.imgur.com/jRPd0ZW.jpg">
+    <meta property="og:site_name" content="FVCproductions">
+    <meta property="og:title" content="Duolingo Delights">
+    <meta property="og:description" content="Surprise yourself with Delights. Learn the language, explore the culture. 🎁">
+    <link href="https://www.duolingo.com/images/favicon.ico?v=3" rel="shortcut icon" type="image/x-icon">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@fvcproductions">
+    <meta name="twitter:title" content="Duolingo Delights">
+    <meta name="twitter:description" content="Surprise yourself with Delights. Learn the language, explore the culture. 🎁">
+    <meta name="twitter:image" content="https://i.imgur.com/jRPd0ZW.jpg">
+</head>
+
 <script type="text/javascript">
     function detectBrowser() {
         var slashIndex = window.location.href.lastIndexOf("/");
